--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Angular D3</title>
     <meta name="description" content="A library for building charts and graphs with D3 and Angular.JS">
     <meta name="viewport" content="width=device-width">
-    <base href="/">
+    <script>document.write('<base href="' + document.location + '" />');</script>
   </head>
   <body data-spy="scroll" data-target="#side-nav">
     <div class="container">
@@ -43,6 +43,5 @@
       <footer class="row">
       </footer>
     </div>
-  <script type="text/javascript" src="./common.js"></script><script type="text/javascript" src="./vendor.js"></script><script type="text/javascript" src="./app.js"></script></body>
+  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="app.js"></script></body>
 </html>
-
