Update README to point to demo page

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Angular D3</title>
     <meta name="description" content="A library for building charts and graphs with D3 and Angular.JS">
     <meta name="viewport" content="width=device-width">
-    <base href="/">
+    <script>document.write('<base href="' + document.location + '" />');</script>
   </head>
   <body data-spy="scroll" data-target="#side-nav">
     <div class="container">
