added D3Gear, a variant of pie charts with two labels and adjustable inner and outer radius based on the data.

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
                 <a href="#pie-charts" target="_self">Pie Charts</a>
               </li>
               <li>
+                <a href="#gear" target="_self">Gear Chart</a>
+              </li>
+              <li>
                 <a href="#arc-charts" target="_self">Arc Charts</a>
               </li>
             </ul>
