Update docs for 1.0.0-rc.9

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="#pie-charts" target="_self">Pie Charts</a>
               </li>
               <li>
+                <a href="#gear" target="_self">Gear Chart</a>
+              </li>
+              <li>
                 <a href="#arc-charts" target="_self">Arc Charts</a>
               </li>
             </ul>
@@ -43,5 +46,5 @@
       <footer class="row">
       </footer>
     </div>
-  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="app.js"></script></body>
+  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="app.1a97c596d26bed29b06d.js"></script><script type="text/javascript" src="vendor.js"></script></body>
 </html>
