Fix and clean docs build

--- a/index.html
+++ b/index.html
@@ -46,5 +46,5 @@
       <footer class="row">
       </footer>
     </div>
-  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="app.1a97c596d26bed29b06d.js"></script><script type="text/javascript" src="vendor.js"></script></body>
+  <script type="text/javascript" src="app.4329bdc5589e2a29974b.js"></script><script type="text/javascript" src="vendor.4329bdc5589e2a29974b.js"></script></body>
 </html>
