--- a/index.html
+++ b/index.html
@@ -46,5 +46,5 @@
       <footer class="row">
       </footer>
     </div>
-  <script type="text/javascript" src="app.4329bdc5589e2a29974b.js"></script><script type="text/javascript" src="vendor.4329bdc5589e2a29974b.js"></script></body>
+  <script type="text/javascript" src="app.e51a5ff80ca5e4d2e178.js"></script></body>
 </html>
