Example page link fix

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                 <a href="#pie-charts" target="_self">Pie Charts</a>
               </li>
               <li>
-                <a href="#gear" target="_self">Gear Chart</a>
+                <a href="#gear-chart" target="_self">Gear Chart</a>
               </li>
               <li>
                 <a href="#arc-charts" target="_self">Arc Charts</a>
