Update docs to RC17

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#pie-charts" target="_self">Pie Charts</a>
               </li>
               <li>
-                <a href="#gear" target="_self">Gear Chart</a>
+                <a href="#gear-chart" target="_self">Gear Chart</a>
               </li>
               <li>
                 <a href="#arc-charts" target="_self">Arc Charts</a>
@@ -46,5 +46,5 @@
       <footer class="row">
       </footer>
     </div>
-  <script type="text/javascript" src="app.e51a5ff80ca5e4d2e178.js"></script></body>
+  <script type="text/javascript" src="app.993923105457c9f71459.js"></script></body>
 </html>
